
  [ Aurelien Jarno ]
  * Drop build-dependency on libgcc1. It has been renamed and it is not
    needed since r62791.
  * Add libgcc-s1 to the fake packages list as it doesn't have an udeb just
    like libgcc1. Remove libc* and libnewt0.52 from that list.
  * Install kmod-udeb instead of libkmod2-udeb now that the library and the
    binaires are properly packaged in different udebs.

  [ Wookey, Steve McIntyre, Alper Nebi Yasak ]
  * Enable gtk build for arm64

 -- Cyril Brulebois <kibi@debian.org>  Thu, 09 Apr 2020 09:06:18 +0200

debian-installer (20200314) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * hppa: Strip -smp suffix from 64-bit kernel version string.

  [ YunQiang Su ]
  * Switch from vmlinux to vmlinuz for mips* except on Octeon.

  [ Raphaël Hertzog ]
  * Make write-built-using more robust.

  [ Vagrant Cascadian ]
  * Update Firefly-RK3288 image for new u-boot version.

  [ Cyril Brulebois ]
  * Bump Linux kernel ABI to 5.4.0-4
  * Update translation-status for the release.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 14 Mar 2020 08:16:10 +0100

debian-installer (20191129) unstable; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386: Set USE_UNRELEASED to 1.
  * gen-sources.list.udeb: Allow to have several spaces around [] qualifiers in
    sources.list entries.
  * build/boot/x86: Restore 'd' shortcut for the dark theme. 'c' can obviously
    not work in grub (Closes: #935545).
  * build/util/grub-gencfg: Set gfxpayload=keep in submenus too, to fix
    unreadable fonts on hidpi displays in netboot images booted with EFI.
    (See: #935546)
  * Add hurd-i386 EFI support.

  [ Karsten Merker ]
  * riscv64: Include nic-modules and scsi-modules for virtio targets
    such as the qemu riscv64 "virt" machine.  In recent kernel versions
    the virtio-modules udeb has been removed and the various virtio
    modules have been included in other module udebs (virtio_blk is now
    in scsi-modules and virtio_net is now in nic-modules).