@@ -1,7 +1,5 @@
 MEDIUM_SUPPORTED = hd-media netboot network-console netboot-gtk device-tree u-boot cdrom
 
-MKLIBS = mklibs-copy --ldlib=/lib/ld-linux-armhf.so.3
-
 KERNELMAJOR = 2.6
 # The version of the kernel to use.
 KERNELVERSION = $(LINUX_KERNEL_ABI)-armmp
