@@ -37,10 +37,6 @@ GRUB_MODULES_PXE=pxe tftp multiboot cpuid echo play gfxterm gfxterm_background g
 # Location for Xen example configuration.
 XENCFG = $(SOME_DEST)/$(EXTRANAME)debian.cfg
 
-# Library reduction needs some extra stuff which for now
-# is not usually available.
-MKLIBS = mklibs-copy
-
 # fakeroot-hurd does not support -s and -i
 ifneq ($(shell id -u),0)
   ROOTCMD = fakeroot-tcp
