@@ -1,7 +1,5 @@
 MEDIUM_SUPPORTED = netboot
 
-MKLIBS = mklibs-copy --ldlib=/lib/ld-linux-riscv64-lp64d.so.1
-
 DEBIAN_RELEASE = unstable
 
 KEYRING = /usr/share/keyrings/debian-ports-archive-keyring.gpg
